

$Id$

================== Release 1.4-dev ==================
Upgrading from Solr 1.3
-----------------------

Detailed Change List
----------------------

New Features
----------------------

Optimizations
----------------------


Bug Fixes
----------------------

 1. SOLR-778: SolrQuery#getFacetMinCount() returns value of facet limit
              (Kohei Taketa via shalin)

Documentation
----------------------


================== Release 1.3.0 20080915 ==================

Status
------
This is the first release since Solrj was added to the main solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features

Changes in runtime behavior
 1. SOLR-278:  Modify LukeRequest/Response to support SOLR-266 schema display.
    (Will Johnson via ryan)

 2. SOLR-280: Changed the SolrDocument / SolrInputDocument implementation.  
    The API to build documents has changed -- you need to pass a boost 
    (or null) with every field.  (ryan)

 3. SOLR-462: Changes to CommonsHttpSolrServer.java to add soTimeout (read 
    timeout), connection pool timeout, directive to not follow HTTP redirects, 
    configurable retries on NoHttpResponseException, compression, and not 
    creating a new HttpClient on each request.  If your existing code overrides 
    getHttpConnection(), you will now need to override createHttpClient()
    (Sean Timm via ryan)
    
 4. SOLR-436: To make future changes easier, SolrServer changed from an
    interface to an abstract super class. (ryan)

 5. SOLR-476: CommonsHttpSolrServer can set the ResponseParser on a per 
    request basis.  (Grant Ingersoll, ryan)

 6. SOLR-430: Added support for reading SpellCheckComponent's responses. (shalin)

 7. SOLR-718: Support persisting solr.xml through SolrJ (Henri Biestro via shalin)

Bug Fixes

Other Changes

 1. SOLR-653: Since the "overwrite" command will be removed in future versions