@@ -28,6 +28,10 @@ Bug Fixes
  1. SOLR-778: SolrQuery#getFacetMinCount() returns value of facet limit
               (Kohei Taketa via shalin)
 
+ 2. SOLR-779: SolrQuery#setHighlightRequireFieldMatch() should be renamed to
+    SolrQuery#getHighlightRequireFieldMatch()
+    (Kohei Taketa, Lars Kotthoff via koji)
+
 Documentation
 ----------------------
 
